[package]
name = "tetris"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
rand = "0.7.3"
array-init = "0.1.1"